syntax = "proto3";

message Empty {}
message Reply { bool success = 1; string code = 2; string message = 3; }

message IntrospectReply {
  bool success = 1;
  string code = 2;
  string message = 3;
  string procedures = 4; // JSON
  string proto = 5; // file contents
}

service Allserver {
  rpc introspect (Empty) returns (IntrospectReply) {}
}

service MyService {
  rpc sayHello (HelloRequest) returns (HelloReply) {}
  rpc introspection (IntrospectionRequest) returns (Reply) {}
  rpc gate(GateRequest) returns (GateReply) {}
  rpc throws(Empty) returns (Reply) {}
  rpc throwsBadArgs(Empty) returns (Reply) {}
  rpc forcedTimeout(Empty) returns (Reply) {}
}

message HelloRequest {
  string name = 1;
}
message HelloReply {
  bool success = 1;
  string code = 2;
  string message = 3;
  string sayHello = 4;
}

message IntrospectionRequest {
  bool enable = 1;
}

message GateRequest {
  int32 number = 1;
}
message GateReply {
  bool success = 1;
  string code = 2;
  string message = 3;
  Gate gate = 4;
  message Gate {
    string name = 1;
    string lastVehicle = 2;
    int32 length = 3;
  }
}
